--- a/projects/Travel_Project/styles/main.css
+++ b/projects/Travel_Project/styles/main.css
@@ -88,9 +88,11 @@ body{
     font-weight: bold;
 }
 
-.grid-item{
-    background-size: cover;
-    background-position: center;
+.grid-item img{
+    object-fit: cover;
+    object-position: center;
+    width: 100%;
+    height: 100%;
 }
 
 @media (max-width:780px){
@@ -98,7 +100,7 @@ body{
         margin: 20px;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(12, 1fr);
-        min-height: fit-content;
+        min-height: max-content;
     }
 
     #banner{
@@ -112,33 +114,33 @@ body{
 
     #form{
         grid-area: 7/1/10/3;
-        height: max-content;
+        height: auto;
         padding: 60px 20px;
 
-    h3 {
-        font-size: 25px;
-        width: 90%;
-    }
-    
-    p {
-        font-size: 15px;
-        width: 90%;
-    }
+        h3 {
+            font-size: 25px;
+            width: 90%;
+        }
 
-    .form_fields{
-        width: 95%;
-    }
+        p {
+            font-size: 15px;
+            width: 90%;
+        }
 
-    label{
-        font-size: 7px;
-    }
+        .form_fields{
+            width: 95%;
+        }
 
-    input, button{
-        height: 33px;
-    }
+        label{
+            font-size: 7px;
+        }
 
-    textarea{
-        height: 95px;
-    }
+        input, button{
+            height: 33px;
+        }
+
+        textarea{
+            height: 95px;
+        }
     }
 }
