--- a/styles/main.css
+++ b/styles/main.css
@@ -14,27 +14,30 @@ a{
     color: #000000;
 }
 
-.josefin-sans {
+.josefin-bold {
+    font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 800;
+    font-style: normal;
+}
+
+.josefin-light {
     font-family: "Josefin Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 300;
     font-style: normal;
 }
 
-.josefin-slab {
-    font-family: "Josefin Slab", serif;
-    font-optical-sizing: auto;
-    font-weight: 600;
-    font-style: normal;
-}
-
 .btn_styling{
-    background-color: #2ec668;
+    
+    background-color:#5cb3d5;
     color: rgb(0, 0, 0);
     text-decoration: none;
     padding: 10px 10px;
     border-radius: 5px;
     transition: 0.3s;
+    font-family: "Josefin Sans";
+    font-weight: 700;
 }
 
 .btn_styling:active{
@@ -42,7 +45,7 @@ color: rgb(0, 0, 0);
 }
 
 .btn_styling:hover{
-    background-color:#20904b ;
+    background-color:rgba(77, 149, 178, 0.6) ;
 }
 
 .btn_styling:focus{
@@ -58,7 +61,7 @@ color: rgb(0, 0, 0);
 
 /*#region -- Header Section -- */
 body{
-    background-color: #595959;
+    background-color:rgb(1, 88, 122);
 }
 
 .logo{
@@ -90,7 +93,6 @@ body{
     justify-content: center;
     align-items: center;
     padding: 20px;
-    font-family: "Vast Shadow";
 }
 
 .hero_box{
@@ -114,12 +116,17 @@ body{
 }
 
 .hero_header {
-    font-size: 40px;
+    font-family: "Josefin Sans";
+    font-size: 50px;
+    font-weight: 700;
     width: 70%;
+    width: fit-content;
 }
 
 .header_text{
     width: 60%;
+    font-family: "Josefin Sans";
+    font-weight: 300;
 }
 
 .hero_img > img {
@@ -130,7 +137,8 @@ body{
 }
 
 .hero_box p{
-    width: fit-content;
+    width: 80%;
+    font-size: 20px;
 }
 
 .hero_buttons{
@@ -146,7 +154,7 @@ body{
 
 /*#region -- Icon Section -- */
 #icon_section{
-    background-color:#161616;
+    background: linear-gradient(to right, rgb(17, 17, 17), rgb(41, 41, 41));
     padding: 15px 0px;
     border-top: 2px solid rgb(255, 255, 255);
     
@@ -164,25 +172,32 @@ body{
 }
 
 .coding_icons>img {
-    height: 80px;
-    width: 80px;
-    border-radius: 15px;
-    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.191);
+    height: 70px;
+    width: 70px;
+    border-radius: 10%;
+    filter: invert();
+    
 }
 
 /*#endregion*/
 
 
 /*#region -- About Me Section -- */
-.aboutMe_box{
+.aboutMe_container{
     background: linear-gradient(to right, rgb(17, 17, 17), rgb(41, 41, 41));
+    
+}
+
+.aboutMe_wrapper{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 50px;
-    padding: 40px;
-    border: 2px solid rgb(255, 255, 255);
-    border-width: 2px 0px;
+    width: 60%;
+    margin-inline: auto;
+    height: auto;
+    gap: 7vw;
+    padding: 30px;
+    border-bottom: 3px solid white;
 }
 
 .aboutMe_text{
@@ -192,7 +207,7 @@ body{
     gap: 20px;
     text-align: center;
     align-items: center;
-    width: 30%;
+    width: 40%;
     color: white;
 }
 
@@ -212,14 +227,15 @@ body{
     height: auto;
     flex-direction: column;
     align-items: center;
-    background-color: #161616;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background: linear-gradient(to right, rgb(17, 17, 17), rgb(41, 41, 41));
+    
 }
 
-.section_header {
+.project_header {
     text-align: center;
     font-weight: 900;
     font-size: 32px;
+    margin-top: 20px;
     padding: 10px 0px;
     color: white;
 }
@@ -253,7 +269,7 @@ body{
     border-top: 2px solid white;
     height: 50%;
     width: 100%;
-    color: rgb(207, 219, 232);
+    color: rgb(255, 255, 255);
     text-align: center;
     font-size: 14px;
     padding: 20px 20px;
@@ -321,8 +337,9 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-   background-color: rgb(27, 27, 27);
+    background: rgb(21, 21, 21);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    border-top: 2px solid white;
     
 }
 
@@ -348,6 +365,7 @@ body{
     width: 90%;
     gap: 10px;
     font-size: 1.1rem;
+    marg
 }
 
 .contact_field{
@@ -368,31 +386,28 @@ body{
 
 #contact_message{
     border: none;
+    margin-bottom: 10px;
 }
 
 #contact_submit{
-    width: 30%;
-}
-
-#contact_submit:hover {
-    background-color: #2fe8ab;
+    width: 40%;
+    margin-bottom: 10px;
 }
 /*#endregion*/
 
 
 /*#region -- Footer Section -- */
 .footer_container {
-    background-color: whitesmoke;
+    background-color:#5cb3d5;
     height: 80px;
     color: #000000;
-    font-family: "Vast Shadow";
 }
 
 .footer_box {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin: auto;
+    margin-inline: auto;
     width: 90%;
 
 }
@@ -407,6 +422,9 @@ body{
 
 .footer_items p{
     margin: auto 0px;
+    font-size: 20px;
+    font-family: "Josefin Sans";
+    font-weight: 500;
 }
 
 .footer_box img{
@@ -476,7 +494,7 @@ body{
         width: 50px;
     }
 
-    .aboutMe_box{
+    .aboutMe_wrapper{
         flex-direction: column-reverse;
         padding: 20px;
         gap: 30px;
@@ -488,7 +506,7 @@ body{
         gap: 10px;
     }
 
-    .aboutMe_box img{
+    .aboutMe_wrapper img{
         width: 50%
     }
 
@@ -516,6 +534,7 @@ body{
         flex-direction: column;
         width: 100%;
         font-size: 12px;
+        
     }
 
     .footer_items{
