--- a/projects/Javascript Projects/World Clock/main.css
+++ b/projects/Javascript Projects/World Clock/main.css
@@ -8,24 +8,14 @@ body{
     background-image: linear-gradient(90deg , rgb(6, 43, 98), rgb(50, 81, 171));
 }
 
-.container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 10px;
-
-        h1{
-            color: whitesmoke;
-        }
-        
-    @media (max-width: 800px){
-        width: 100%;
-    }
+h1{
+    text-align: center;
+    margin-block: 20px;
+    color: white;
 }
 
-.clock_container{
-    height: 80vh;
+.container{
+    height: fit-content;
     width: 70%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -33,54 +23,48 @@ body{
     align-items: center;
     justify-content: center;
     gap: 20px;
-    margin-top: 10px;
+    margin: auto
 }
 
-.grid-item {
+.cityBox {
+    background-color: darkblue;
+    color: whitesmoke;
+    text-align: center;
     position: relative;
     height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
+    padding: 10px 5px;
     border: 2px solid white;
     border-radius: 10px;
     box-shadow: 5px 3px 15px rgb(0, 0, 0);
-
-    .clockForm{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 10px;
-    }
 }
 
-.nameTime{
-    background-color: rgba(0, 0, 0, 0.561);
-    padding: 5px 10px;
-    border-radius: 10px;
-    color: rgb(210, 210, 210);
-    z-index: 1;
-
-    h2{
-        font-size: 4vh;
-    }
+.input-container{
+    border: 1px solid white;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin: 10px;
 }
 
-#clock1{
+#city1{
     grid-area: 1/1/3/2;
 }
 
-#clock2{
+#city2{
     grid-area: 1/2/2/4;
 }
 
-#clock3{
+#city3{
     grid-area: 2/3/4/4;
 }
 
-#clock4{
+#city4{
     grid-area: 3/1/4/3;
 }
