--- a/projects/Javascript Projects/World Clock/main.css
+++ b/projects/Javascript Projects/World Clock/main.css
@@ -17,40 +17,96 @@ h1{
 .container{
     height: fit-content;
     width: 70%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     gap: 20px;
-    margin: auto
+    margin: auto;
+
 }
 
 .cityBox {
-    background-color: darkblue;
+    background-color: rgba(92, 71, 163, 0.484);
     color: whitesmoke;
     text-align: center;
-    position: relative;
-    height: 100%;
-    width: 100%;
+    width: fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    padding: 10px 5px;
+    padding: 2px;
     border: 2px solid white;
     border-radius: 10px;
     box-shadow: 5px 3px 15px rgb(0, 0, 0);
+
 }
 
-.input-container{
+.cityName{
+    margin-block: 10px;
+    color: rgb(201, 254, 205);
+}
+.time{
+    font-size: 20px;
+    font-weight: bold;
+    color: bisque;
+}
+
+.weather{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    margin-block: 10px;
+
+    .temp{
+        font-size: 20px;
+        font-weight: bold;
+        color: rgb(74, 253, 214);
+    }
+
+    .icon{
+        max-height: 100%;
+        max-width: 100%;
+    }
+
+    .description{
+        font-size: 20px;
+        font-weight: bold;
+        color: rgb(74, 253, 214);
+    }
+}
+
+.input-form{
     border: 1px solid white;
+    padding: 5px;
+    border-radius: 5px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     gap: 10px;
     margin: 10px;
+    font-weight: bold;
+
+    input{
+        border: none;
+        background-color: rgba(251, 249, 249, 0.404);
+        padding: 5px;
+    }
+
+    button{
+        border: none;
+        background-color: rgba(251, 249, 249, 0.404);
+        padding: 5px;
+        border-radius: 5px;
+        color: white;
+    }
+
+    input:focus{
+        outline: 1px solid rgb(115, 240, 213);
+    }
 }
 
 #city1{
