--- a/projects/Javascript Projects/User Login/style.css
+++ b/projects/Javascript Projects/User Login/style.css
@@ -1,11 +1,33 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Roboto Flex", sans-serif;
 }
 
 
-.register, .login, .landing{
+.roboto-flex-regular> {
+    font-family: "Roboto Flex", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+button:hover{
+    background-color: rgb(120, 142, 202);
+}
+
+button{
+    padding: 10px 20px;
+    background-color: rgb(152, 180, 255);
+    border: none;
+    border-radius: 5px;
+    transition: 0.5s;
+}
+
+.form-container{
     background-color: rgb(225, 239, 252);
     margin: 100px auto;
     display: flex;
@@ -13,13 +35,16 @@
     padding: 20px;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     height: fit-content;
     width: fit-content;
-    border-radius: 5px;
+    border-radius: 10px;
 
     form {
+        display: flex;
+        flex-direction: column;
         gap: 10px;
+        width: 50%;
     }
 
     input{
@@ -27,21 +52,61 @@
         padding: 5px;
     }
 
-    button:hover{
-        background-color: rgb(120, 142, 202);
-    }
-    button{
-        padding: 10px 20px;
-        background-color: rgb(152, 180, 255);
-        border: none;
-        border-radius: 5px;
-        transition: 0.5s;
-    }
-
     p{
         margin-bottom: 10px;
     }
 }
+
+#landing{
+    width: 40%;
+    height: 40vh;
+    flex-direction: row;
+
+    h1{
+        width: 50%;
+    }
+
+    .clickThrough{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        width: 50%;
+
+        a{
+            width: fit-content;
+        }
+    
+        p{
+            font-size: 24px;
+        }
+    
+        button{
+            width: 300px;
+            padding: 15px;
+            font-size: 28px;
+            font-weight: bold;
+        }
+    }
+}
+
+#login{
+    width: 40%;
+    height: fit-content;
+    font-size: 24px;
+
+    h1{
+        font-size: 36px;
+    }
+
+    button{
+        font-size: 20px;
+    }
+
+    @media (max-width: 800px){
+        width: 90%;
+    }
+}
+
 
 .usernameNote{
     color: red;
