--- a/projects/Javascript Projects/Mikvah Calendar/main.css
+++ b/projects/Javascript Projects/Mikvah Calendar/main.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-color: rgb(76, 72, 183);
+    background-color: rgb(192, 76, 174);
 }
 
 .container{
@@ -25,13 +25,13 @@ body{
     h1{
         text-align: center;
         margin-block: 10px;
-        color: rgb(211, 211, 211);
+        color: rgb(254, 226, 248);
         font-size: 40px;
     }
 
     .form{
         margin: auto;
-        background-color: rgb(208, 80, 184);
+        background-color: rgb(254, 254, 223);
         display: flex;
         flex-direction: column;
         gap: 10px;
@@ -81,4 +81,5 @@ body{
     padding: 10px;
     width: 60%;
     height: 100vh;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.345);
 }
