--- a/styles/main.css
+++ b/styles/main.css
@@ -32,7 +32,7 @@ a{
 }
 
 .btn_styling{
-    
+    cursor: pointer;
     background-color:#8e5cd5;
     color: rgb(0, 0, 0);
     text-decoration: none;
@@ -252,17 +252,36 @@ body{
 
 /*#region -- Project Card Section -- */
 
+#projectButtons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding: 10px;
+    background: linear-gradient(to right, rgb(17, 17, 17), rgb(41, 41, 41));
+    padding-top: 30px;
+
+    button h2{
+        font-size: 20px;
+        padding: 5px;
+        margin: 0;
+
+    }
+}
+
 .project_section {
     display: flex;
     height: auto;
     flex-direction: column;
     align-items: center;
     background: linear-gradient(to right, rgb(17, 17, 17), rgb(41, 41, 41));
+
 }
 
 .project_header {
     text-align: center;
-    font-size: 32px;
+    font-size: 24px;
     margin-top: 20px;
     padding: 10px 0px;
     color: white;
@@ -270,7 +289,7 @@ body{
 
 .project_card_area{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-template-rows: 1fr 1fr 1fr;
     gap: 30px;
     width: 60%;
@@ -278,8 +297,10 @@ body{
     margin-bottom: 40px;
 
     @media (max-width: 900px) {
-        grid-template-columns: repeat(2, minmax(150px, 1fr));
-        width: 100%;
+        width: 95% !important;
+        
+        grid-template-columns: repeat(2, minmax(175px, 1fr));
+        gap: 15px;
     }
 }
 
@@ -293,7 +314,7 @@ body{
     border: 2px groove white;
 
     @media (max-width: 900px) {
-       width: 100%;
+    
     } 
 }
 
