--- a/styles/main.css
+++ b/styles/main.css
@@ -272,7 +272,7 @@ body{
 
 .project_section {
     display: flex;
-    height: auto;
+    height: fit-content;
     flex-direction: column;
     align-items: center;
     background: linear-gradient(to right, rgb(17, 17, 17), rgb(41, 41, 41));
@@ -289,12 +289,12 @@ body{
 
 .project_card_area{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-rows: auto;
     gap: 30px;
     width: 60%;
-    height: auto;
-    margin-bottom: 40px;
+    height: fit-content;
+    margin-bottom: 30px;
 
     @media (max-width: 900px) {
         width: 95% !important;
@@ -307,7 +307,7 @@ body{
 .project_card{
     display: flex;
     flex-direction: column;
-    height: 400px;
+    height: 450px;
     align-items: center;
     justify-content: center;
     border-radius: 10px;
