--- a/projects/Javascript Projects/Mikvah Calendar/main.css
+++ b/projects/Javascript Projects/Mikvah Calendar/main.css
@@ -59,16 +59,22 @@ body{
             font-size: 24px;
         }
 
+        #button-div{
+            display: flex;
+            gap: 10px;
+        }
+
         button{
+            width: 100%;
             padding: 10px;
             border-radius: 5px;
             border: none;
-            background-color: rgb(255, 255, 255);
+            background-color: rgb(252, 43, 169);
             transition: 0.3s;
             font-size: 36px;
 
             &:hover{
-                background-color: rgb(154, 152, 152);
+                background-color: rgb(153, 26, 102);
             }
         }
     }
