--- a/projects/Javascript Projects/Mikvah Calendar/main.css
+++ b/projects/Javascript Projects/Mikvah Calendar/main.css
@@ -14,6 +14,11 @@ body{
     justify-content: center;
     align-items: center;
     gap: 50px;
+
+    @media (max-width: 780px) {
+        flex-direction: column;
+        gap: 20px;
+    }
 }
 
 .form-container{
@@ -22,11 +27,21 @@ body{
     width: 40%;
     gap: 20px;
 
+    @media (max-width: 780px) {
+        gap: 10px;
+        width: 100%;
+    }
+
     h1{
         text-align: center;
         margin-block: 10px;
         color: rgb(254, 226, 248);
         font-size: 40px;
+
+        @media (max-width: 780px) {
+            font-size: 20px;
+            margin-block: 5px;
+        }
     }
 
     .form{
@@ -39,10 +54,19 @@ body{
         padding: 30px 20px;
         border-radius: 10px;
         
+        @media (max-width: 780px) {
+            width: 95%;
+            padding: 10px;
+        }
+
         label{
             font-size: 24px;
             font-weight: bold;
             color: rgb(18, 18, 18);
+
+            @media (max-width: 780px) {
+                font-size: 18px;
+            }
         }
 
         input{
@@ -50,6 +74,10 @@ body{
             border-radius: 5px;
             border: none;
             font-size: 36px;
+
+            @media (max-width: 780px) {
+                font-size: 24px;
+            }
         }
 
         select{
@@ -57,6 +85,10 @@ body{
             border-radius: 5px;
             border: none;
             font-size: 24px;
+
+            @media (max-width: 780px) {
+                font-size: 18px;
+            }
         }
 
         #button-div{
@@ -76,6 +108,11 @@ body{
             &:hover{
                 background-color: rgb(153, 26, 102);
             }
+
+            @media (max-width: 780px) {
+                font-size: 20px;
+                padding: 5px;
+            }
         }
     }
 }
@@ -88,4 +125,11 @@ body{
     width: 60%;
     height: 100vh;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.345);
+
+    @media (max-width: 780px) {
+        width: 100%;
+        border-radius: 10px;
+        height: fit-content;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.345);
+    }
 }
